# cdxgen_scio_plugin

./: README.md  setup.cfg  setup.py
src/scio_generate_cdxgen_sbom_pipeline/: generate_cdxgen_sbom.py
