[metadata]
license_files =
    LICENSE
name = scio_generate_cdxgen_sbom_pipeline
author = Rahul Sunder
author_email = rkillzboom@gmail.com
license = MIT

description = A plugin that adds a pipeline that creates sbom using cdxgen in scancodeio
url = https://github.com/supplyshield/cdxgen_scio_plugin
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords =
    utilities
    scancodeio
    pipelines

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
python_requires = >=3.10
install_requires =
    golicense_classifier==0.0.16
setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.entry_points]
scancodeio_pipelines =
    scio_generate_cdxgen_sbom_pipeline = scio_generate_cdxgen_sbom_pipeline.generate_cdxgen_sbom:GenerateCdxgenSbom